@@ -59,6 +59,8 @@ struct _GdaServerProviderClass {
 				      GdaQuarkList *params,
 				      const gchar *username,
 				      const gchar *password);
+	gboolean (* reset_connection) (GdaServerProvider *provider,
+				       GdaConnection *cnc);
 	gboolean (* close_connection) (GdaServerProvider *provider,
 				       GdaConnection *cnc);
 
@@ -129,6 +131,8 @@ gboolean gda_server_provider_open_connection (GdaServerProvider *provider,
 					      GdaQuarkList *params,
 					      const gchar *username,
 					      const gchar *password);
+gboolean gda_server_provider_reset_connection (GdaServerProvider *provider,
+					       GdaConnection *cnc);
 gboolean gda_server_provider_close_connection (GdaServerProvider *provider,
 					       GdaConnection *cnc);
 
